--- a/Lab1/styles/stylesheet.css
+++ b/Lab1/styles/stylesheet.css
@@ -38,4 +38,8 @@ color: white;
 
 body {
 background-image: url(../Images/Background.jpg)
+background-position: center; 
+height: 100%;
+background-size: cover;
+background-repeat: no-repeat;
 }
