--- a/Lab1/styles/stylesheet1.css
+++ b/Lab1/styles/stylesheet1.css
@@ -1,7 +1,9 @@
 body {
 background-image: url(../Images/Background1.png);
-max-height: 1080px;
-max-width: 1920px;
+background-position: center; 
+height: 100%;
+background-size: cover;
+background-repeat: no-repeat;
 }
 
 h1 {
@@ -17,11 +19,18 @@ p {
 	color: #F8F9FB;
 }
 
+div.header {
+	position: absolute;
+	top: 0;
+	left: 0.5%;
+	float: left;
+}
+
 div.info {
 height: 10em;
 margin: 0;
 position: absolute;
-top: 25%;
+top: 30%;
 left: 50%;
 margin-right: -50%;
 transform: translate(-50%, -50%)
