--- a/Lab1/styles/stylesheet4.css
+++ b/Lab1/styles/stylesheet4.css
@@ -1,5 +1,9 @@
 body {
 background-image: url(../Images/Background4.jpg);
+background-position: center; 
+height: 100%;
+background-size: cover;
+background-repeat: no-repeat;
 }
 
 h1 {
